tests/errors/sem_assign6.java
public class sem_assign6 {
public static void main(String[] args){
String value  = 26 ;
}
}